// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create a AlignCenter icon 1`] = `
<span
  data-active={false}
  onClick={[Function]}
  onMouseDown={[Function]}
>
  <svg
    className={undefined}
    height="18px"
    onChange={[Function]}
    viewBox="0 0 18 18"
    width="18px"
  >
    <line
      className="ql-stroke"
      x1="15"
      x2="3"
      y1="9"
      y2="9"
    />
    <line
      className="ql-stroke"
      x1="14"
      x2="4"
      y1="14"
      y2="14"
    />
    <line
      className="ql-stroke"
      x1="12"
      x2="6"
      y1="4"
      y2="4"
    />
  </svg>
</span>
`;

exports[`create a AlignLeft icon 1`] = `
<span
  data-active={false}
  onClick={[Function]}
  onMouseDown={[Function]}
>
  <svg
    className={undefined}
    height="18px"
    onChange={[Function]}
    viewBox="0 0 18 18"
    width="18px"
  >
    <line
      className="ql-stroke"
      x1="3"
      x2="15"
      y1="9"
      y2="9"
    />
    <line
      className="ql-stroke"
      x1="3"
      x2="13"
      y1="14"
      y2="14"
    />
    <line
      className="ql-stroke"
      x1="3"
      x2="9"
      y1="4"
      y2="4"
    />
  </svg>
</span>
`;

exports[`create a AlignRight icon 1`] = `
<span
  data-active={false}
  onClick={[Function]}
  onMouseDown={[Function]}
>
  <svg
    className={undefined}
    height="18px"
    onChange={[Function]}
    viewBox="0 0 18 18"
    width="18px"
  >
    <line
      className="ql-stroke"
      x1="15"
      x2="3"
      y1="9"
      y2="9"
    />
    <line
      className="ql-stroke"
      x1="15"
      x2="5"
      y1="14"
      y2="14"
    />
    <line
      className="ql-stroke"
      x1="15"
      x2="9"
      y1="4"
      y2="4"
    />
  </svg>
</span>
`;
